# 5_FastAPI

./: .gitignore  Dockerfile.parser  README.md  docker-compose.yaml  env.example  pyproject.toml
app/: main.py
app/api/: api.py
app/core/: celery_app.py  settings.py
app/crud/: base_crud.py  spimex_trading.py
app/migrations/: env.py
app/migrations/versions/: 2025_01_21_0941-7138ab5494a9_initial.py  2025_01_21_0947-0f2a3ed19ed0_complete_model.py  2025_01_21_0948-d74e1d63a97e_complete_model_2.py
app/models/: __init__.py  models.py
app/schemas/: schemas.py
app/services/: cache_services.py  services.py  utils.py
app/tests/: conftest.py  factory.py  utils.py
app/tests/api/: conftest.py  test_api.py
app/tests/cache/: test_cache.py
app/tests/migrations/: conftest.py  test_migrations_up_to_date.py  test_stairway.py
app/tests/services/: test_services.py  test_utils.py
