[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
pydantic-settings = "^2.7.1"
psycopg2-binary = "^2.9.10"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
alembic = "^1.14.1"
asyncpg = "^0.30.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
mypy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# black
[tool.black]
line-length = 79
extend-exclude = "migrations/"

# isort
[tool.isort]
profile = "black"
extend_skip_glob = ["migrations"]
known_local_folder=["core", "crud", "api", "models", "schemas", "tests", "main", "utils"]
line_length = 79
lines_after_imports = 2


# mypy
[tool.mypy]
exclude = ["migrations/"]

[tool.pylint]
ignore = [".git", "__pycache__", "migrations", ".venv"]
max-line-length = 79
disable = ["C0114", "C0115", "C0116", "W1514", "W3101", "R0903", "C0103"]

# pytest
[tool.pytest.ini_options]
addopts = "-x"
testpaths = ["app/tests"]